<resources>
    <string name="app_name">AGREGA RURAL</string>
    <string name="nome">AGREGA RURAL</string>
    <string name="slogan">O melhor para sua plantação</string>
    <string name="botao1">Entrar</string>
    <string name="botao2">Cadastre-se</string>
    <string name="acessar">Acesse sua \nconta</string>
    <string name="email">Email</string>
    <string name="ins_email">Insira o email cadastrado</string>
    <string name="ins_senha">Insira a sua senha</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="recuperar">Esqueceu a sua senha? Clique aqui!</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_pes">Nome</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="continuar">Continue</string>
    <string name="numeros">Apenas números</string>
    <string name="CPF">CPF</string>
    <string name="CEP">CEP</string>
    <string name="repetir">Repita a senha</string>
    <string name="termos">Termos de Compromisso</string>
    <string name="acordo">Estou de acordo com os termos de compromisso.</string>
    <string name="coop">Cooperativa</string>
    <string name="coopnome">Nome da sua cooperativa</string>
    <string name="matricula">Matrícula</string>
    <string name="cooperados">Apenas para cooperados</string>
    <string name="associado">É associado da cooperativa?</string>
    <string name="positivo">Se sim, clique no botão e informe sua matrícula.</string>
    <string name="finalizar">Finalizar cadastro</string>
    <string name="fechar">Fechar</string>
    <string name="recuperacao2">Recuperação da senha</string>
    <string name="popup1">As informações sobre a recuperação de senha já foram\n enviadas para o email cadastrado!</string>
    <string name="recuperacao">Recuperação\n da senha</string>
    <string name="informar">Informe o email cadastrado</string>
    <string name="enviar">Enviar</string>
    <string name="cooperativa">Minha Cooperativa</string>
    <string name="contatos">Contatos da cooperativa</string>
    <string name="card1">+15 MIL</string>
    <string name="card1.1">Cooperados</string>
    <string name="card2">3</string>
    <string name="card2.1">Estados de\natuação</string>
    <string name="card3">200 ANOS</string>
    <string name="card3.1">De fundação</string>
    <string name="card4">50+</string>
    <string name="card4.1">Produtos no\ncatálogo</string>
    <string name="entrega">Entrega</string>
    <string name="menu">Menu</string>
    <string name="carrinho">Carrinho</string>
    <string name="home">Home</string>
    <string name="avancar_seta">Avançar</string>
    <string name="voltar_seta">Voltar</string>
    <string name="imagem_de_fundo">Imagem de fundo</string>
    <string name="contatos1">Contatos</string>
    <string name="telefones">Telefones:</string>
    <string name="num_telefone">27-999999999\n27-999999999</string>
    <string name="email1">Email:</string>
    <string name="gmail">pedrocoop@gmail.com</string>
    <string name="enderecos">Endereços</string>
    <string name="endereco1">Rua das Acácias, 847 – Jardim Primavera Betim – MG, 32689-000</string>
    <string name="endereco2">Rua Monte Azul, 312 – Jucutuquara Vitória – ES, 29045-900</string>
    <string name="atendimento_ao_cliente_sac">Atendimento ao Cliente (SAC)</string>
    <string name="oi_gostaria_de_uma_informa_o">Oi, gostaria de uma informação.</string>
    <string name="promo_o">Promoção</string>
    <string name="bovinos">Bovinos</string>
    <string name="categoria">CATEGORIA</string>
    <string name="editar_cart_o">Editar cartão</string>
    <string name="desconectar">Desconectar</string>
    <string name="selecione_uma_cooperativa">Selecione uma cooperativa</string>
    <string name="cooperativas">Cooperativas</string>
    <string name="erro_ao_carregar">Erro ao carregar cooperativas.</string>
    <string name="selecione_uma_cooperativa_valida">Selecione uma cooperativa válida.</string>
    <string name="informe_sua_matricula">Informe sua matrícula.</string>
    <string name="matricula_ja_existente">Essa matrícula já está cadastrada nessa cooperativa.</string>
    <string name="erro_ao_verificar_matricula">Erro ao verificar matrícula.</string>
    <string name="insira_o_seu_email">Insira o seu e-mail!</string>
    <string name="insira_a_sua_senha">Insira a sua senha!</string>
    <string name="erro_ao_entrar">Erro ao entrar: %1$s</string>
    <string name="erro_ao_carregar_dados_do_perfil">Erro ao carregar dados do perfil.</string>
    <string name="insira_o_seu_email2">Por favor, insira o seu e-mail!</string>
    <string name="erro_ao_enviar">Erro ao enviar: %1$s</string>
    <string name="preencha_seu_nome">Preencha seu nome!</string>
    <string name="preencha_seu_email">Preencha seu email!</string>
    <string name="preencha_seu_cep">Preencha seu CEP!</string>
    <string name="preencha_seu_cpf">Preencha seu CPF!</string>
    <string name="preencha_os_campos_de_senha">Preencha os campos de senha!</string>
    <string name="as_senhas_nao_coincidem">As senhas não coincidem!</string>
    <string name="voce_precisa_aceitar_os_termos">Você precisa aceitar os termos!</string>
    <string name="cadastro_realizado_com_sucesso">Cadastro realizado com sucesso!</string>
    <string name="erro_ao_salvar_dados_adicionais">Erro ao salvar dados adicionais.</string>
    <string name="erro_ao_cadastrar">Erro ao cadastrar: %1$s</string>
    <string name="selecione_pelo_menos_um_item">Selecione pelo menos um item</string>
    <string name="nenhum_item_selecionado">Nenhum item selecionado.</string>
    <string name="erro_ao_carregar_enderecos">Erro ao carregar endereços</string>
    <string name="selecione_um_endereco">Selecione um endereço</string>
    <string name="usuario_nao_logado">Usuário não logado</string>
    <string name="nenhum_item_selecionado_para_o_pedido">Nenhum item selecionado para o pedido</string>
    <string name="cooperativa_do_usuario_nao_encontrada">Cooperativa do usuário não encontrada</string>
    <string name="erro_ao_buscar_cooperativa_do_usuario">Erro ao buscar cooperativa do usuário</string>
    <string name="erro_ao_gerar_pedido">Erro ao gerar pedido</string>
    <string name="pedido_criado_aguardando_pagamento">Pedido criado. Aguardando pagamento.</string>
    <string name="erro_ao_criar_pedido">Erro ao criar pedido</string>
    <string name="preencha_nome_cep_numero_e_logradouro">Preencha nome, CEP, número e logradouro</string>
    <string name="erro_ao_gerar_id_do_endereco">Erro ao gerar ID do endereço</string>
    <string name="endereco_cadastrado_com_sucesso">Endereço cadastrado com sucesso</string>
    <string name="erro_ao_cadastrar_endereco">Erro ao cadastrar endereço</string>
    <string name="mensagem_boasvindas">Olá! Bem-vindo ao suporte. Como posso ajudar?</string>
    <string name="mensagem1">Se preferir falar com a nossa equipe por telefone, você pode ligar para:\n</string>
    <string name="mensagem2">(xx) xxxx-xxxx\n</string>
    <string name="mensagem3">Horário de atendimento: Segunda a sexta-feira, das 8h às 18h Sábados, das 8h às 12h</string>
    <string name="mensagem4">Olá! Digite sua dúvida sobre pedidos ou perfil.</string>
    <string name="mensagem5">Você pode rastrear seu pedido na tela \'Entrega\'.</string>
    <string name="mensagem6">Entendi. Vou encaminhar sua dúvida para um especialista.\n</string>
    <string name="mensagem7">Ao ser analisado. Enviaremos uma mensagem para o email informado.</string>
    <string name="cooperativa_nao_encontrada">Cooperativa não encontrada</string>
    <string name="erro_ao_buscar_cooperativa">Erro ao buscar cooperativa</string>
    <string name="erro_ao_carregar_produtos">Erro ao carregar produtos</string>
    <string name="carregando">Carregando...</string>
    <string name="usuario_nao_autenticado">Usuário não autenticado.</string>
    <string name="usuario_nao_vinculado_a_uma_cooperativa">Usuário não vinculado a uma cooperativa.</string>
    <string name="erro_ao_buscar_coopuid_do_usuario">Erro ao buscar coopUid do usuário.</string>
    <string name="erro_ao_carregar_dados_da_cooperativa">Erro ao carregar dados da cooperativa.</string>
    <string name="nao_informado">Não informado</string>
    <string name="endereco_nao_informado">Endereço não informado</string>
    <string name="cooperativa_nao_encontrada_para_este_usuario">Cooperativa não encontrada para este usuário</string>
    <string name="erro_ao_contar_cooperados">Erro ao contar cooperados</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="buscar_produtos">Buscar produtos...</string>
    <string name="usuario_sem_coopuid">Usuário sem coopUid</string>
    <string name="erro_ao_buscar_coopuid">Erro ao buscar coopUid</string>
    <string name="erro_ao_carregar_categorias">Erro ao carregar categorias</string>
    <string name="atendimento_ao_cliente_sac_menu">Atendimento ao cliente (SAC)</string>
    <string name="promocoes">Promoções</string>
    <string name="mais_vendidos">Mais vendidos</string>
    <string name="desconectar_menu">Desconectar</string>
    <string name="deseja_realmente_sair_da_sua_conta">Deseja realmente sair da sua conta?</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="desconectado_com_sucesso">Desconectado com sucesso!</string>
    <string name="produto_adicionado_ao_carrinho">Produto adicionado ao carrinho</string>
    <string name="alterar_foto_de_perfil">Alterar foto de perfil</string>
    <string name="enviando_foto">Enviando foto...</string>
    <string name="erro_ao_enviar_foto">Erro ao enviar foto</string>
    <string name="nao_foi_possivel_abrir_a_imagem">Não foi possível abrir a imagem</string>
    <string name="erro_na_resposta_do_imgbb">Erro na resposta do ImgBB</string>
    <string name="resposta_vazia_do_imgbb">Resposta vazia do ImgBB</string>
    <string name="imgbb_nao_aceitou_a_imagem">ImgBB não aceitou a imagem</string>
    <string name="foto_atualizada">Foto atualizada</string>
    <string name="finalizarpedido">Finalizar pedido</string>
    <string name="nenhum_produto_encontrado_nessa_categoria">Nenhum produto encontrado nessa categoria.</string>
    <string name="digite_aqui">Digite aqui</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="navegar">Navegar</string>
    <string name="nome1">Nome:</string>
    <string name="cpf1">CPF:</string>
    <string name="cooperativa1">Cooperativa:</string>
    <string name="codigo_de_membro">Codigo de Membro:</string>
    <string name="ola">Olá</string>
    <string name="categorias1">CATEGORIAS</string>
    <string name="promocao1">PROMOÇÃO</string>
    <string name="meus_enderecos">Meus endereços</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="pedidos_concluidos">Pedidos concluídos</string>
    <string name="pedidos_em_transito">Pedidos em trânsito</string>
    <string name="enderecos_de_entrega">ENDEREÇOS DE ENTREGA</string>
    <string name="defina_seu_endereco">Defina seu endereço</string>
    <string name="cadastrar_novo_endereco">Cadastrar Novo Endereço</string>
    <string name="cep">CEP</string>
    <string name="numero">Numero</string>
    <string name="apenas_numeros">Apenas números</string>
    <string name="ex_99">Ex: 99</string>
    <string name="logradouro">LOGRADOURO</string>
    <string name="complemento">COMPLEMENTO</string>
    <string name="rua_avenida">Rua, Avenida</string>
    <string name="opcional">Opcional</string>
    <string name="referencia">REFERÊNCIA</string>
    <string name="nome2">NOME</string>
    <string name="nome_do_endereco">Nome do endereço. Ex: Casa</string>
    <string name="confirmar1">CONFIRMAR</string>
    <string name="enderecos_salvos">Endereços salvos</string>
</resources>