<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/constraint_interno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">


            <View
                android:id="@+id/view_desing1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="@id/constraint_interno"
                app:layout_constraintStart_toStartOf="@id/constraint_interno"
                app:layout_constraintTop_toTopOf="@id/constraint_interno" />

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/view_desing1">

                <ImageView
                    android:id="@+id/btnVoltar"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/voltar"
                    app:tint="#FFFFFF" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


            </LinearLayout>


            <TextView
                android:id="@+id/formasDePagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/enderecos_de_entrega"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtituloPagina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/defina_seu_endereco"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/cadastrar_novo_endereco"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="2"
                    android:padding="10dp">


                    <TextView
                        android:layout_columnWeight="1"
                        android:text="@string/cep" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:text="@string/numero" />

                    <EditText
                        android:id="@+id/edtCep"

                        android:layout_columnWeight="1"
                        android:layout_height="50dp"
                        android:hint="@string/apenas_numeros"
                        android:background="@drawable/shape_edit_text"
                        android:textSize="20sp"
                        android:padding="6dp"
                        android:layout_margin="2dp"
                        />

                    <EditText
                        android:id="@+id/edtNumero"
                        android:layout_columnWeight="1"
                        android:layout_height="50dp"
                        android:hint="@string/ex_99"
                        android:background="@drawable/shape_edit_text"
                        android:textSize="20sp"
                        android:padding="6dp"
                        android:layout_margin="2dp"
                        />

                    <TextView
                        android:layout_columnWeight="1"

                        android:layout_marginTop="10dp"
                        android:text="@string/logradouro" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:text="@string/complemento" />

                    <EditText
                        android:id="@+id/edtLogradouro"
                        android:layout_height="50dp"
                        android:layout_columnWeight="1"
                        android:hint="@string/rua_avenida"
                        android:background="@drawable/shape_edit_text"
                        android:textSize="20sp"
                        android:padding="6dp"
                        android:layout_margin="2dp"/>

                    <EditText
                        android:id="@+id/edtComplemento"
                        android:layout_columnWeight="1"
                        android:layout_height="50dp"
                        android:hint="@string/opcional"
                        android:background="@drawable/shape_edit_text"
                        android:textSize="20sp"
                        android:padding="6dp"
                        android:layout_margin="2dp"
                        />

                </GridLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/referencia" />

                <EditText
                    android:id="@+id/edtReferencia"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/opcional"
                    android:background="@drawable/shape_edit_text"
                    android:textSize="20sp"
                    android:paddingStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/nome2" />

                <EditText
                    android:id="@+id/edtNomeEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/nome_do_endereco"
                    android:background="@drawable/shape_edit_text"
                    android:textSize="20sp"
                    android:paddingStart="10dp"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirmarNewAdress"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/confirmar1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="6dp"/>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/enderecos_salvos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEnderecosSalvos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/confirmar1"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
