<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperacao2"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup1"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btFechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechar"
        android:backgroundTint="@color/botoes"
        android:textColor="@color/white"/>
</LinearLayout>