<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cooperative.ContatosCoop"
    android:paddingBottom="80dp">

    <!-- TOPO -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_gradient"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="40dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:layout_width="48dp"
            android:id="@+id/btnVoltar"
            android:layout_height="48dp"
            android:contentDescription="@string/voltar_seta"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white"
            android:background="@null"
            />

        <TextView
            android:text="@string/contatos"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- CONTEÚDO (SCROLL) -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="80dp">

            <!-- CONTATOS -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/contatos1"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- TELEFONES -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefones"
                    android:textColor="@color/cinza_texto_contatos"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTelefoneCoop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black"
                    tools:text="@string/num_telefone" />
            </LinearLayout>

            <!-- EMAIL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email1"
                    android:textColor="@color/cinza_texto_contatos"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEmailCoop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black"
                    tools:text="@string/gmail" />
            </LinearLayout>

            <!-- ENDEREÇOS -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/enderecos"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- ENDEREÇO 1 -->
            <LinearLayout
                android:id="@+id/cardEndereco1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtEndereco1Coop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="@string/endereco1" />
            </LinearLayout>

            <!-- ENDEREÇO 2 -->
            <LinearLayout
                android:id="@+id/cardEndereco2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtEndereco2Coop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="@string/endereco2" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>